# receiver

./: README.md  dashboard.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dashboard_app.py  database.py  deps.py  logging_utils.py  main.py  models.py  schema_patch.py  schemas.py
app/dashboard/: __init__.py  routes.py  schemas.py  ui.py  utils.py
app/dashboard/assets/: dashboard.css  dashboard.js  validation_errors.js
app/dashboard/templates/: index.html  validation_errors.html
app/services/: __init__.py  artifact_ingestor.py  converter_trigger.py  image_pipeline.py  parser_bridge.py  parser_ws_bridge.py  scheduler.py
migrations/manual/: 20260226_drop_raw_task_run_storage.sql  20260226_run_artifacts_parser_name_drop_payload.sql  20260226_task_runs_assigned_invariant.sql  20260301_ingest_performance_indexes.sql  20260319_parser_store_directory.sql
tests/: conftest.py  test_artifact_ingestor.py  test_dashboard_script.py  test_database_url.py  test_image_pipeline.py  test_parser_ws_bridge.py  test_receiver_api.py  test_scheduler.py  test_schema_patch.py
