[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receiver"
version = "0.1.0"
description = "Receiver server for orchestrators with SQLAlchemy task scheduling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.40",
  "pymysql>=1.1.1",
  "httpx>=0.28.1",
  "websockets>=12.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
]

[project.scripts]
receiver-dashboard = "app.dashboard_app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
